<resources>
    <string name="app_name">Marites</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm"> Retype Password</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="register">REGISTER</string>
    <string name="contacts">Contacts</string>
    <string name="viewProfile">View Profile</string>
    <string name="aboutApp">About the App</string>
    <string name="register_now">Gusto mo sumali sa chika? \nSwipe left to register now.</string>
    <string name="login_now">Itutuloy ba natin ang chika? \nSwipe right to login.</string>
    <string name="search">Search ka-Chat</string>
    <string name="message">Hello!</string>
    <string name="app_id">ph.gcash.marites</string>
    <string name="app_description">Marites is a free messaging app developed by Celso and Densel for Android smartphones. It allows you to chat with text to speech functionality and send pictures.</string>
    <string name="about_this_app">About this App</string>
    <string name="profile_id">ID:</string>
    <string name="profile_name">Name:</string>
    <string name="profile_email">Email:</string>
    <string name="retype_password">Retype Password</string>
    <string name="search_user">Search User Here</string>
    <string name="please_wait">Please wait.</string>
</resources>