<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:elevation="10dp"
    android:layout_margin="@dimen/default_margin"
    tools:context=".main.ui.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@color/cyan_500"
        android:padding="@dimen/small_padding"
        android:src="@drawable/ic_person"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_hash"
            app:drawableTint="@color/cyan_200"
            android:drawablePadding="@dimen/small_padding"
            android:text="@string/profile_id"
            android:textColor="@color/cyan_200"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/UUID_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:textColor="@color/white"
            android:textSize="20sp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_profile"
            app:drawableTint="@color/cyan_200"
            android:drawablePadding="@dimen/small_padding"
            android:text="@string/profile_name"
            android:textColor="@color/cyan_200"
            android:textSize="26sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fullName_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            app:drawableTint="@color/cyan_200"
            android:drawablePadding="@dimen/small_padding"
            android:text="@string/profile_email"
            android:textColor="@color/cyan_200"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userEmail_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_logout"
        app:cornerRadius="@dimen/default_corner_radius_view" />

</LinearLayout>