<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sh_loginbox_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".login.ui.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_padding"
            android:gravity="center"
            android:elevation="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:padding="@dimen/small_padding"
                android:src="@drawable/ic_person"
                android:background="@color/cyan_500"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_text"
                android:layout_margin="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_email"
                android:layout_margin="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_margin="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:startIconDrawable="@drawable/ic_password"
                android:layout_margin="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/register"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/green_500"
                app:icon="@drawable/ic_register"
                app:cornerRadius="@dimen/default_corner_radius_view" />

            <ProgressBar
                android:id="@+id/pb_registerProgress"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/green_200"/>

            <TextView
                android:id="@+id/tv_registerMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:padding="@dimen/small_padding"
                android:text="@string/login_now"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>