<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".login.ui.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/semitransparent"
        android:layout_margin="@dimen/view_margin_default_size"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_margin="@dimen/view_margin_default_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_margin="@dimen/view_margin_default_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/view_margin_default_size"
                android:clickable="true"
                style="?android:textAppearanceSmall"
                android:foreground="?android:selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/cyan_500"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:padding="5dp"
                android:text="@string/register_now"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>